versioned_docs/version-23.1/reference/rpk/rpk-cloud/rpk-cloud-byoc-install.mdx
---
title: rpk cloud byoc install
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk cloud byoc install| Redpanda Docs" />
  <meta name="description" content="rpk cloud byoc install" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-cloud/rpk-cloud-byoc-install/" />
</head>

Install the BYOC plugin.

This command downloads the BYOC managed plugin if necessary. The plugin is
installed by default if you try to run a non-install command, but this command
exists if you want to download the plugin ahead of time.

## Usage

```bash
rpk cloud byoc install [flags]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>--client-id</td>
      <td>string</td>
      <td>The client ID of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>--client-secret</td>
      <td>string</td>
      <td>The client secret of the organization in Redpanda Cloud.</td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for install.</td>
    </tr>
    <tr>
      <td>--redpanda-id</td>
      <td>string</td>
      <td>The redpanda ID of the cluster you are creating.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging (default: false).</td>
    </tr>
  </tbody>
</table>
